--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,7 @@
    border-radius:  25px;
    
  }
-h1{
-  color: black;
-  background-color: rgba(87, 82, 82, 0.774);
-  font-style:inherit; 
-  text-align: center;
-  border:2px solid rgba(255, 217, 0, 0.575);
-  
-}
+
 table:hover{
   background-color: rgba(197, 189, 189, 0.644);
   color: black;
@@ -48,18 +41,19 @@ label:hover{
 }
 .btn{
   color: azure;
-  background-color: rgba(70, 68, 64, 0.315);
+  background-color:black;
   border-radius: 45;
   margin-left:1em;
   font-size: 20px;
   font-weight: bold;
-  
+  border-radius:  45px;
 }
 .btn:hover{
-  background-color:black;
+  background-color: rgba(30, 139, 202, 0.315);
+  color: black;
   border-color: gold;
   cursor: pointer;
-  border-radius:  45px;
+  
 }
 .Denomininations{
   background-color: rgba(34, 30, 30, 0.534);
@@ -67,13 +61,16 @@ label:hover{
   
 }
 .InputValue{
+  size: 30px;
   border-radius:10px;
+  font-size: 30px;;
+  font-weight: bold;
   color: black;
-  background-color: rgba(70, 68, 64, 0.315);
+  background-color: whitesmoke(247, 243, 236, 0.315);
 }
 .InputValue:hover{
   border: black;
-  border-radius:  45px;
+  border-radius:10px;
 }
 table{
   text-align: center;
@@ -94,8 +91,15 @@ table{
 }
 h1:hover{
   color: aliceblue;
+  background-color: rgba(87, 82, 82, 0.774);
+}
+h1{
+  color: rgb(255, 250, 250);
   background-color: rgb(0, 0, 0);
  cursor:alias;
  border-radius:  45px;
-
+  font-style:inherit; 
+  text-align: center;
+  border:2px solid rgba(255, 217, 0, 0.575);
+  
 }
